# recommendation-engine

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: artifact.py  benchmark.py  data.py  experiment.py  main.py  methodology.py  model.py  preference.py  simulate.py  store.py  vehicle-session.html
artifacts/experiments/targeted-eig-aec84a9237/: events.csv  summary.csv  summary.json
data/: catalog_manifest.json  vehicles.csv
db/: schema.sql
scripts/: import_epa.py  reset_v1_schema.py
tests/: conftest.py  test_api.py  test_artifact.py  test_benchmark.py  test_data.py  test_experiment.py  test_methodology.py  test_model.py  test_packaging.py  test_postgres.py  test_preference.py  test_simulation.py  test_targeted_eig.py  test_targeted_learning.py
tests/fixtures/: epa_sample.csv
