# Authoritative dependency source. requirements.txt / requirements-dev.txt are
# derived mirrors kept for the Docker image and plain-pip bootstrap;
# tests/test_packaging.py fails if the mirrors drift from this file.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recommendation-engine"
version = "0.1.0"
description = "Thumbs-only Bayesian active preference elicitation over a real U.S. vehicle catalog"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.13.0",
    "numpy==2.5.1",
    "psycopg[binary]==3.3.4",
    "pgvector==0.5.0",
    "fastapi==0.139.2",
    "uvicorn==0.51.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# UV is the setup entry point. `uv sync` installs the application and the
# complete pinned development toolchain into ./.venv from uv.lock.
[dependency-groups]
dev = [
    "pytest==9.1.1",
    "httpx==0.28.1",
    "matplotlib==3.11.1",
    "hatch==1.17.1",
]

# The default env reuses ./.venv so UV, Hatch, and the test suite share one
# verified environment.
[tool.hatch.envs.default]
path = ".venv"
dependencies = [
    "pytest==9.1.1",
    "httpx==0.28.1",
    "matplotlib==3.11.1",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:-q}"
# Everything that runs without the compose PostgreSQL database (the Postgres
# and API suites are the only exclusions).
test-nodb = "pytest -q --ignore=tests/test_postgres.py --ignore=tests/test_api.py {args}"
verify = [
    "python -m compileall -q app tests scripts",
    "git diff --check",
    "pytest {args:-q}",
]
benchmark = "python -m app.benchmark {args}"
serve = "uvicorn app.main:app --port 8000 {args}"
